syntax = "proto3";

package todo;

option go_package = "https://github.com/MaxHorstmann/TodoGrpcKubernetes/todo";

service todos {
    rpc AddTodo (Todo) returns (AddTodoReply) {}
    rpc GetAllTodos (GetAllTodosParams) returns (GetAllTodosResponse) {}
}

message Todo {
    string task = 1;
    bool done = 2;
}

message GetAllTodosParams {}

message AddTodoReply {
    string something = 1;
}

message GetAllTodosResponse {
    repeated string response = 1;
}